@@ -3,8 +3,8 @@
 import dbus
 
 bus = dbus.SessionBus()
-proxy_obj = bus.get_object('org.xchat.service', '/org/xchat/RemoteObject')
-xchat = dbus.Interface(proxy_obj, 'org.xchat.interface')
+proxy_obj = bus.get_object('org.xchatgnome.service', '/org/xchatgnome/RemoteObject')
+xchat = dbus.Interface(proxy_obj, 'org.xchatgnome.interface')
 
 lst = xchat.ListGet ("users")
 while xchat.ListNext (lst):
