@@ -1,3 +1,12 @@
+Thu Jul 27 21:21:54 CEST 2006  Xavier Claessens <xclaesse@gmail.com>
+
+	* src/common/dbus/example.py:
+	  - Change org.xchat. to org.xchatgnome.
+	* src/common/dbus/dbus-plugin.c:
+	  - Set PVERSION to "" like that the dbus plugin doesn't appear in
+	    plugin list anymore.
+	* configure.ac:
+	  - DBus plugin depends on dbus and dbus-plugin >=0.60
 Thu Jul 27 20:29:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/text-entry.c:
